# birbhouse-game-jam

./: CMakeLists.txt  README.md  birbhouse-game-jam
res-prep/: birbhouse-theme.mmpz  birbhouse-thing-maybe.mmpz  tilemap.xcf
src/: AnimatedSprite.cpp  AnimatedSprite.h  AnimatedSprite.hpp  AnimationSequence.cpp  AnimationSequence.hpp  Equipment.cpp  Equipment.hpp  Game.cpp  Game.h  Game.hpp  GameActor.cpp  GameActor.h  GameActor.hpp  GameEvents.cpp  GameExit.cpp  GameInit.cpp  GameLoop.cpp  GameObject.cpp  GameObject.hpp  GameRender.cpp  Helmet.cpp  Helmet.hpp  Item.hpp  Logger.cpp  Logger.hpp  Obstacle.hpp  Player.cpp  Player.hpp  QuadTree.cpp  QuadTree.hpp  Sword.cpp  Sword.hpp  getElement.hpp  main.cpp
